Tests/CompilerTests/negative/cyclic-typealias.hylo
//! no-std

type X = Y
type Y = Z
type Z = X
